# housepred

./: .gitignore  README.md  app.py  main.py  pyproject.toml  template.py
config/: config.yaml
research/: 2_data_validation.ipynb
src/housepricepred/utils/: common.py
src/wineqltypred/: __init__.py
src/wineqltypred/components/: data_ingestion.py  data_validation.py  model_evaluation.py
src/wineqltypred/config/: configuration.py
src/wineqltypred/entity/: config_entity.py
src/wineqltypred/pipeline/: data_ingestion_pipeline.py  data_validation_pipeline.py  prediction_pipeline.py
src/wineqltypred/utils/: common.py
