[project]
name = "housepred"
version = "0.1.0"
description = ""
authors = [
    {name = "Yusuf Raheem",email = "yusufraheem500@gmail.com"}
]
readme = "README.md"
requires-python p= "3.12.3"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
