[project]
name = "housepred"
version = "0.1.0"
description = ""
authors = [
    {name = "Yusuf Raheem",email = "yusufraheem500@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.3"
dependencies = [
    "mlflow (>=3.10.1,<4.0.0)",
    "notebook (>=7.5.5,<8.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "python-box (>=7.4.1,<8.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "ensure (>=1.0.4,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
